; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/sound/usb/extr_uaudio.c_uaudio20_set_speed.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/sound/usb/extr_uaudio.c_uaudio20_set_speed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_device = type { i32 }
%struct.usb_device_request = type { i32, i32, i32, i32, i32 }

@.str = private unnamed_addr constant [32 x i8] c"ifaceno=%d clockid=%d speed=%u\0A\00", align 1
@UT_WRITE_CLASS_INTERFACE = common dso_local global i32 0, align 4
@UA20_CS_CUR = common dso_local global i32 0, align 4
@UA20_CS_SAM_FREQ_CONTROL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.usb_device*, i32, i32, i32)* @uaudio20_set_speed to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @uaudio20_set_speed(%struct.usb_device* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.usb_device*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca %struct.usb_device_request, align 4
  %10 = alloca [4 x i32], align 16
  store %struct.usb_device* %0, %struct.usb_device** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %11 = load i32, i32* %6, align 4
  %12 = load i32, i32* %7, align 4
  %13 = load i32, i32* %8, align 4
  %14 = call i32 @DPRINTFN(i32 6, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0), i32 %11, i32 %12, i32 %13)
  %15 = load i32, i32* @UT_WRITE_CLASS_INTERFACE, align 4
  %16 = getelementptr inbounds %struct.usb_device_request, %struct.usb_device_request* %9, i32 0, i32 4
  store i32 %15, i32* %16, align 4
  %17 = load i32, i32* @UA20_CS_CUR, align 4
  %18 = getelementptr inbounds %struct.usb_device_request, %struct.usb_device_request* %9, i32 0, i32 3
  store i32 %17, i32* %18, align 4
  %19 = getelementptr inbounds %struct.usb_device_request, %struct.usb_device_request* %9, i32 0, i32 2
  %20 = load i32, i32* %19, align 4
  %21 = load i32, i32* @UA20_CS_SAM_FREQ_CONTROL, align 4
  %22 = call i32 @USETW2(i32 %20, i32 %21, i32 0)
  %23 = getelementptr inbounds %struct.usb_device_request, %struct.usb_device_request* %9, i32 0, i32 1
  %24 = load i32, i32* %23, align 4
  %25 = load i32, i32* %7, align 4
  %26 = load i32, i32* %6, align 4
  %27 = call i32 @USETW2(i32 %24, i32 %25, i32 %26)
  %28 = getelementptr inbounds %struct.usb_device_request, %struct.usb_device_request* %9, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = call i32 @USETW(i32 %29, i32 4)
  %31 = load i32, i32* %8, align 4
  %32 = getelementptr inbounds [4 x i32], [4 x i32]* %10, i64 0, i64 0
  store i32 %31, i32* %32, align 16
  %33 = load i32, i32* %8, align 4
  %34 = ashr i32 %33, 8
  %35 = getelementptr inbounds [4 x i32], [4 x i32]* %10, i64 0, i64 1
  store i32 %34, i32* %35, align 4
  %36 = load i32, i32* %8, align 4
  %37 = ashr i32 %36, 16
  %38 = getelementptr inbounds [4 x i32], [4 x i32]* %10, i64 0, i64 2
  store i32 %37, i32* %38, align 8
  %39 = load i32, i32* %8, align 4
  %40 = ashr i32 %39, 24
  %41 = getelementptr inbounds [4 x i32], [4 x i32]* %10, i64 0, i64 3
  store i32 %40, i32* %41, align 4
  %42 = load %struct.usb_device*, %struct.usb_device** %5, align 8
  %43 = getelementptr inbounds [4 x i32], [4 x i32]* %10, i64 0, i64 0
  %44 = call i32 @usbd_do_request(%struct.usb_device* %42, i32* null, %struct.usb_device_request* %9, i32* %43)
  ret i32 %44
}

declare dso_local i32 @DPRINTFN(i32, i8*, i32, i32, i32) #1

declare dso_local i32 @USETW2(i32, i32, i32) #1

declare dso_local i32 @USETW(i32, i32) #1

declare dso_local i32 @usbd_do_request(%struct.usb_device*, i32*, %struct.usb_device_request*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
